--- a/README
+++ b/README
@@ -6,9 +6,16 @@
 5. [FAQs](#faqs)
 ### General Info
 ***
-Write down the general informations of your project. It is worth to always put a project status in the Readme file. This is where you can add it. 
+El repositorio cuenta con 4 ARCHIVOS de HTML y 3 de CSS; estos se encargan de mostrar un menú principal con artículos el cual contiene un botón para ver más información de este mismo al apretar el botón este lo lleva a la página donde describe el artículo más a detalle con características y descripción del producto para información sobre los pedidos que se hacen en la página se encuentra el carrito el cual contiene esta información. La pagines es responsive por lo cual se agrego una condicion a la cual si se intenta entrar desde un dispositivo de escritorio esta mostrara un mensaje ya que el la pagina es solo para dispositivos moviles. el proyecto se plantea a futuro a agregar funcionalidad a otras características como lo son la implementacion de el uso de base de datos y JavaScript
 ### Screenshot
-![Image text](https://www.united-internet.de/fileadmin/user_upload/Brands/Downloads/Logo_IONOS_by.jpg)
+![Image text](./imagenes/Menu-principal.jpg)
+
+![Image text](./imagenes/caracteristicas%20del%20producto.jpg)
+
+![Image text](./imagenes/carrito.jpg)
+
+![Image text](./imagenes/responsive.png)
+
 ## Technologies
 ***
 A list of technologies used within the project:
