--- a/README
+++ b/README
@@ -1,9 +1,6 @@
 ## Table of Contents
 1. [General Info](#general-info)
 2. [Technologies](#technologies)
-3. [Installation](#installation)
-4. [Collaboration](#collaboration)
-5. [FAQs](#faqs)
 ### General Info
 ***
 El repositorio cuenta con 4 ARCHIVOS de HTML y 3 de CSS; estos se encargan de mostrar un menú principal con artículos el cual contiene un botón para ver más información de este mismo al apretar el botón este lo lleva a la página donde describe el artículo más a detalle con características y descripción del producto para información sobre los pedidos que se hacen en la página se encuentra el carrito el cual contiene esta información. La pagines es responsive por lo cual se agrego una condicion a la cual si se intenta entrar desde un dispositivo de escritorio esta mostrara un mensaje ya que el la pagina es solo para dispositivos moviles. el proyecto se plantea a futuro a agregar funcionalidad a otras características como lo son la implementacion de el uso de base de datos y JavaScript
@@ -19,38 +16,5 @@ El repositorio cuenta con 4 ARCHIVOS de HTML y 3 de CSS; estos se encargan de mo
 ## Technologies
 ***
 A list of technologies used within the project:
-* [Technologie name](https://example.com): Version 12.3 
-* [Technologie name](https://example.com): Version 2.34
-* [Library name](https://example.com): Version 1234
-## Installation
-***
-A little intro about the installation. 
-```
-$ git clone https://example.com
-$ cd ../path/to/the/file
-$ npm install
-$ npm start
-```
-Side information: To use the application in a special environment use ```lorem ipsum``` to start
-## Collaboration
-***
-Give instructions on how to collaborate with your project.
-> Maybe you want to write a quote in this part. 
-> It should go over several rows?
-> This is how you do it.
-## FAQs
-***
-A list of frequently asked questions
-1. **This is a question in bold**
-Answer of the first question with _italic words_. 
-2. __Second question in bold__ 
-To answer this question we use an unordered list:
-* First point
-* Second Point
-* Third point
-3. **Third question in bold**
-Answer of the third question with *italic words*.
-4. **Fourth question in bold**
-| Headline 1 in the tablehead | Headline 2 in the tablehead | Headline 3 in the tablehead |
-|:--------------|:-------------:|--------------:|
-| text-align left | text-align center | text-align right 
+* [Technologie name](HTML): Version 5.0
+* [Technologie name](CSS): Version 3.0
